--- a/frontend/assets/css/style_login.css
+++ b/frontend/assets/css/style_login.css
@@ -300,6 +300,125 @@ main section{
   cursor: pointer;
 }
 
+/*
+ form de cadastro
+*/
+
+.register-formulario{
+  width: 45%;
+  box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-left: 40px;
+  margin-bottom: 30px;
+}
+
+.register-formulario h2{
+  text-align: center;
+  color: #0AA6A6;
+  font-weight: 600;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.register-form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.register-form label {
+  margin-bottom: 5px; 
+  margin-top: 20px;
+}
+
+.register-form input{
+  height: 50px;
+  border-radius: 10px;
+  border: #35384bab 1px solid;
+  padding-left: 15px;
+  font-size: 12px;
+}
+
+.register-form p{
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+.register-form .checkbox {
+  display: flex;
+  align-items: center; 
+  margin-bottom: 10px;
+}
+
+.register-form .checkbox input {
+  margin-right: 5px; 
+}
+
+.register-form button{
+  height: 50px;
+  background-color: #C3F250;
+  color: #3C5401;
+  margin-bottom: 20px;
+  border: none;
+  font-weight: bold;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.social-register{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.facebook, .instagram, .google{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 15px;
+  border: none;
+  border-radius: 10px;
+}
+
+.facebook > img, .instagram > img, .google > img{
+  width: 30px;
+  height: 30px;
+  padding: 10px;
+}
+
+#esqueceu-senha{
+  color: #0AA6A6;
+  font-weight: bold;
+}
+
+
+#cadastrar-form-titulo{
+  color: #35384B;
+}
+
+#cadastrar-form-button{
+  background-color: #35384B;
+  color: #0AA6A6;
+}
+
+.register-formulario:hover{
+  transform: scale(1.07);
+}
+
+.register-formulario button:hover{
+  background-color: #aacc55;
+  cursor: pointer;
+}
+
+#cadastrar-form-button:hover{
+  background-color: #1d1e25;
+  cursor: pointer;
+}
+
 /* Add this at the end of your CSS file */
 @media only screen and (max-width: 1300px) {
   .menu{
