--- a/src/views/cadastro-produtor.ejs
+++ b/src/views/cadastro-produtor.ejs
@@ -1,18 +1,17 @@
 <%- include('includes/head'); %>
 
-<body>
   <div id="cabecalho">
     <p>Produtos Sustentáveis
-      <img src="/assets/icone-nexus.png" alt="icone-nexus">
+      <img src="/assets/img/icone-nexus.png" alt="icone-nexus">
     </p>
 
   </div>
 
   <header class="logo-login">
-    <a href="index.html">
+    <a href="/">
       <div id="logo2">
-        <img src="/assets/icone-nexus.png" alt="" id="icone-nx">
-        <img src="/assets/nexus.png" alt="" id="nome-nx">
+        <img src="/assets/img/icone-nexus.png" alt="" id="icone-nx">
+        <img src="/assets/img/nexus.png" alt="" id="nome-nx">
       </div>
     </a>
   </header>
@@ -22,8 +21,10 @@
     <section>
       <div id="form-produtor">
         <h2>Envie seu cadastro</h2>
-        <p>Já é produtor? <a href="login-produtor.html">Clique aqui para entrar!</a></p>
-        <form class="login-form">
+        <p>Já é produtor? <a href="/produtor/login">Clique aqui para entrar!</a></p>
+        <%- include('includes/messages'); %>
+        <form class="login-form" action="/produtor/registrar" method="post">
+          <input type="hidden" name="_csrf" value=<%=csrfToken %>>
           <div class="forms-clas">
             <div class="forms-clas2">
               <label for="nome">Nome</label>
@@ -40,12 +41,12 @@
           <input type="email" id="emais" name="email" placeholder="Digite seu email" required>
 
           <label for="senha">Senha</label>
-          <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
+          <input type="password" id="password" name="password" placeholder="Digite sua senha" required>
 
           <div class="forms-clas">
             <div class="forms-clas2">
               <label for="cpf">CPF</label>
-              <input type="number" id="cpf" name="cpf" placeholder="Digite seu cpf" required>
+              <input type="text" id="cpf" name="cpf" placeholder="Digite seu cpf" required>
             </div>
 
             <div class="forms-clas2" id="segundo">
@@ -60,6 +61,5 @@
       </div>
     </section>
   </main>
-</body>
 
-</html>
+<%- include('includes/footer'); %>
