--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/assets/img/icone-nexus.png" type="image/x-icon">
     <link rel="stylesheet" href="/assets/css/style_login.css">
     <link rel="stylesheet" href="/assets/css/style_cadastro_produtor.css">
+    <link rel="stylesheet" href="/assets/css/style_home.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
